--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <title>PWA Skeleton v1</title>
+    <title>Fit4Seniors</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Seniorenfreundliche Gesundheits- und Trainings-PWA: Übungen, Gedächtnistraining, Fortschritt und tägliche Motivation."
+    />
+    <meta property="og:title" content="Fit4Seniors" />
+    <meta
+      property="og:description"
+      content="Einfache Übungen, Gedächtnistraining und Erinnerungen für ein aktives Leben ab 60+."
+    />
+    <meta name="theme-color" content="#1B3A57" />
   </head>
   <body>
     <div id="root"></div>
